Bug 168018 - FILEOPEN PPTX: graphics shows with weird effects in presentation mode
Summary: FILEOPEN PPTX: graphics shows with weird effects in presentation mode
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Slide-Show
  Show dependency treegraph
 
Reported: 2025-08-19 23:11 UTC by Gerald Pfeifer
Modified: 2025-08-23 22:05 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Visual comparison before/proper (top) - after/broken (bottom) (1.42 MB, image/png)
2025-08-19 23:13 UTC, Gerald Pfeifer
Details
Top in Edit mode, bottom in presentation mode (320.38 KB, image/png)
2025-08-19 23:52 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gerald Pfeifer 2025-08-19 23:11:14 UTC
This is a regression that happened with the last daily snapshot:

   Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
   Build ID: fd48da7236f26d9d8d16759546a5c860f91b82de
   CPU threads: 12; OS: Linux 6.15; UI render: default; VCL: gtk3

1. Open attachment #160098 [details] from bug #132539
2. Enter presentation mode.
3. Observe how the two circles render totally different than with
   earlier versions of Impress or in Edit mode.


This looks a bit like bug #167893. It is a different issue, though. The
build above processes bug #167893 properly. Earlier builds that get it
wrong, get this new issue right.

(I would not be surprised for the fix for bug #167893, bug #167879,
and bug #167876 to have triggered this.)
Comment 1 Gerald Pfeifer 2025-08-19 23:13:54 UTC
Created attachment 202386 [details]
Visual comparison before/proper (top) - after/broken (bottom)
Comment 2 Regina Henschel 2025-08-19 23:52:47 UTC
Created attachment 202387 [details]
Top in Edit mode, bottom in presentation mode

It looks much better for me. Tested in Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a0eb4dcd04a6d8f4a6df474f74edceb8936a3aa6
CPU threads: 32; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: threaded
Comment 3 Xisco Faulí 2025-08-20 10:24:39 UTC
Regression introduced by:

commit eb4394e3460932011940a1e3c03d5d67d7f45885	[log]
author	Noel Grandin <noel.grandin@collabora.co.uk>	Mon Aug 18 13:31:30 2025 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	Mon Aug 18 19:08:54 2025 +0200
tree c9425ba7b3a5c7ef4b3bb00babb9a75b9db6c6dc
parent cfdda21862cf661fa197326f1456b605636638f8 [diff]

tdf#167893 and tdf#167876 weird effects in slideshow

Bisected with: linux64-26.2
Comment 4 Commit Notification 2025-08-21 09:24:21 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/201fadd949d258b66d6848f0c4cedb8b95876084

tdf#168018 PPTX: graphics shows with weird effects in presentation mode

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Gerald Pfeifer 2025-08-23 22:03:39 UTC
Thank you for addressing this and the previous regression so swiftly
(on top of the original improvement to begin with), Noel!

Happy to confirm this as addressed with the last -dev build:

   Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
   Build ID: 764799befcb927f68f78e904213e3db7195554cb
   CPU threads: 12; OS: Linux 6.16; UI render: default; VCL: gtk3
Comment 6 Gerald Pfeifer 2025-08-23 22:05:27 UTC
I'm just a bit nervous seeing we seemingly do not have any regression
tests that would have caught this bug (or bug #167893, bug #167879, or
bug #167876).