tdf#168018 PPTX: graphics shows with weird effects in presentation mode

regression from
    commit eb4394e3460932011940a1e3c03d5d67d7f45885
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Mon Aug 18 13:31:30 2025 +0200
    tdf#167893 and tdf#167876 weird effects in slideshow

added a bunch of comments so the next person doesn't assume that cairo is sane, like I initially did.

Change-Id: I37558c423e740421952b7c7a7e318dec17262191
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/189981
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>